--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <uses-feature android:glEsVersion="0x00020000" />
 
@@ -17,7 +18,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ViewTrainSchedule"></activity>
-        <activity android:name=".viewPagerAdapter" />
         <activity android:name=".View_v" />
         <activity android:name=".TrainSchedule" />
         <activity android:name=".Signup" />
@@ -41,8 +41,10 @@
             android:exported="false"/>
 
         <service
-            android:name=".TestService"
-            android:exported="false"/>
+            android:name=".TrackerService"
+            android:enabled="true"
+            android:exported="true">
+        </service>
 
     </application>
 
