--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,6 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'org.jetbrains:annotations-java5:15.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
